add jenkins container in docker compose and add README

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,27 @@ services:
       - webapp2
       - webapp3
 
+
+
+  jenkins_cicd_server:
+    image: jenkins/jenkins:lts-jdk21
+    hostname: jenkins_svr
+    ports:
+      - 8080:8080
+      - 50000:50000
+    networks:
+      - test-network
+    volumes:
+      - jenkins_home:/var/jenkins_home
+    restart: on-failure
+
+
+
+
+
 networks:
   test-network:
     driver: bridge
+
+volumes:
+  jenkins_home:
