move file location for jenkins dockerfile and rename previously docker-compose.yml

--- a/compose-cicd-setup.yml
+++ b/compose-cicd-setup.yml
@@ -3,7 +3,7 @@ services:
   jenkinsimg:
     build:
       context: .
-      dockerfile: ./zimcasts-web/_dockerfiles/jenkins.dockerfile
+      dockerfile: ./_dockerfiles/jenkins.dockerfile
       tags:
         - testjenkins-image
 
