fix jenkinsfile and docker compose file for web env

--- a/zimcasts-web/compose-web-env.yml
+++ b/zimcasts-web/compose-web-env.yml
@@ -3,16 +3,16 @@ services:
 
   appimg:
     build:
-      context: .
-      dockerfile: ./zimcasts-web/_dockerfiles/webapp.dockerfile
+      context: ./zimcasts-web
+      dockerfile: ./_dockerfiles/webapp.dockerfile
       tags:
         - webapp-image
 
 
   proxyimg:
     build:
-      context: .
-      dockerfile: ./zimcasts-web/_dockerfiles/webproxy.dockerfile
+      context: ../zimcasts-web
+      dockerfile: ./_dockerfiles/webproxy.dockerfile
       tags:
         - webproxy-image
 
